# omnibus.zw-lab.net

./: .gitignore
recorder/: pyproject.toml
recorder/deploy/: bootstrap-ct.sh  nginx-omnibus.conf
recorder/migrations/: 002_recorder.sql
recorder/omnibus/: __main__.py  config.py  resources.py  sb.py  security.py
recorder/omnibus/auth/: teams_session.py
recorder/omnibus/bot/: broadcaster.py  browser.py  display.py  events.py  recorder.py  session.py  teams.py  tracking.py
recorder/omnibus/calendar/: ics.py  watcher.py
recorder/omnibus/services/: ics_calendars.py  recordings.py  summarizer.py
recorder/omnibus/storage/: service.py
recorder/omnibus/supervise/: vnc.py
recorder/omnibus/web/: app.py
