[project]
name = "zw-omnibus-recorder"
version = "1.0.0"
description = "ZW-Omnibus meeting recorder backend (multiuser)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typer>=0.12",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "icalendar>=5.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
omnibus-recorder = "omnibus.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["omnibus*"]
